Adopt apache http client 5
LMCROSSITXSADEPLOY-1549