@@ -1,105 +1,54 @@
 package org.cloudfoundry.multiapps.controller.core.http;
 
-import java.io.Closeable;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import org.apache.hc.client5.http.classic.methods.HttpGet;
+import org.apache.hc.client5.http.classic.methods.HttpHead;
+import org.apache.hc.client5.http.classic.methods.HttpOptions;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpClient;
+import org.apache.hc.client5.http.impl.classic.CloseableHttpResponse;
+import org.apache.hc.core5.http.ClassicHttpRequest;
+import org.apache.hc.core5.http.ClassicHttpResponse;
+import org.apache.hc.core5.http.Header;
+import org.apache.hc.core5.http.HttpHost;
+import org.apache.hc.core5.http.HttpRequest;
+import org.apache.hc.core5.http.HttpStatus;
+import org.apache.hc.core5.http.io.entity.EntityUtils;
+import org.apache.hc.core5.http.protocol.HttpContext;
+import org.apache.hc.core5.io.CloseMode;
 
-import org.apache.http.Header;
-import org.apache.http.HttpHost;
-import org.apache.http.HttpRequest;
-import org.apache.http.HttpResponse;
-import org.apache.http.HttpStatus;
-import org.apache.http.client.HttpClient;
-import org.apache.http.client.ResponseHandler;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.client.methods.HttpHead;
-import org.apache.http.client.methods.HttpOptions;
-import org.apache.http.client.methods.HttpUriRequest;
-import org.apache.http.conn.ClientConnectionManager;
-import org.apache.http.params.HttpParams;
-import org.apache.http.protocol.HttpContext;
-import org.apache.http.util.EntityUtils;
-
-public class CsrfHttpClient implements HttpClient, Closeable {
+public class CsrfHttpClient extends CloseableHttpClient {
 
     public static final String CSRF_TOKEN_HEADER_NAME = "X-CSRF-TOKEN";
     public static final String CSRF_TOKEN_HEADER_FETCH_VALUE = "Fetch";
     public static final String CSRF_TOKEN_HEADER_REQUIRED_VALUE = "Required";
-    private static final List<String> NON_PROTECTED_METHODS = Arrays.asList(HttpGet.METHOD_NAME, HttpOptions.METHOD_NAME,
-                                                                            HttpHead.METHOD_NAME);
+    private static final List<String> NON_PROTECTED_METHODS = List.of(HttpGet.METHOD_NAME, HttpOptions.METHOD_NAME,
+                                                                      HttpHead.METHOD_NAME);
 
-    private final HttpClient delegate;
+    private final CloseableHttpClient delegate;
     private String csrfToken;
     private final String csrfGetTokenUrl;
     private final Map<String, String> httpRequestHeaders;
     private boolean isTokenInitialized;
 
-    public CsrfHttpClient(HttpClient httpClient, String csrfGetTokenUrl, Map<String, String> httpRequestHeaders) {
+    public CsrfHttpClient(CloseableHttpClient httpClient, String csrfGetTokenUrl, Map<String, String> httpRequestHeaders) {
         this.delegate = httpClient;
         this.csrfGetTokenUrl = csrfGetTokenUrl;
         this.httpRequestHeaders = httpRequestHeaders;
     }
 
     @Override
-    public HttpParams getParams() {
-        return delegate.getParams();
-    }
-
-    @Override
-    public ClientConnectionManager getConnectionManager() {
-        return delegate.getConnectionManager();
-    }
-
-    @Override
-    public HttpResponse execute(HttpUriRequest request) throws IOException {
-        return executeRequest(request, () -> delegate.execute(request));
-    }
-
-    @Override
-    public HttpResponse execute(HttpUriRequest request, HttpContext context) throws IOException {
-        return executeRequest(request, () -> delegate.execute(request, context));
-    }
-
-    @Override
-    public HttpResponse execute(HttpHost target, HttpRequest request) throws IOException {
-        return executeRequest(request, () -> delegate.execute(target, request));
-    }
-
-    @Override
-    public HttpResponse execute(HttpHost target, HttpRequest request, HttpContext context) throws IOException {
+    protected CloseableHttpResponse doExecute(HttpHost target, ClassicHttpRequest request, HttpContext context) throws IOException {
         return executeRequest(request, () -> delegate.execute(target, request, context));
-    }
-
-    @Override
-    public <T> T execute(HttpUriRequest request, ResponseHandler<? extends T> responseHandler) throws IOException {
-        return executeRequest(request, () -> delegate.execute(request, responseHandler));
-    }
-
-    @Override
-    public <T> T execute(HttpUriRequest request, ResponseHandler<? extends T> responseHandler, HttpContext context) throws IOException {
-        return executeRequest(request, () -> delegate.execute(request, responseHandler, context));
-    }
-
-    @Override
-    public <T> T execute(HttpHost target, HttpRequest request, ResponseHandler<? extends T> responseHandler) throws IOException {
-        return executeRequest(request, () -> delegate.execute(target, request, responseHandler));
-    }
-
-    @Override
-    public <T> T execute(HttpHost target, HttpRequest request, ResponseHandler<? extends T> responseHandler, HttpContext context)
-        throws IOException {
-        return executeRequest(request, () -> delegate.execute(target, request, responseHandler, context));
     }
 
     private <T> T executeRequest(HttpRequest request, Executor<T> executionSupplier) throws IOException {
         T result = executeWithCsrfTokenSetting(request, executionSupplier);
-        if (!(result instanceof HttpResponse)) {
+        if (!(result instanceof ClassicHttpResponse response)) {
             return result;
         }
-        HttpResponse response = (HttpResponse) result;
         if (isRetryNeeded(request, response)) {
             result = executeWithCsrfTokenSetting(request, executionSupplier);
         }
@@ -130,8 +79,7 @@ public class CsrfHttpClient implements HttpClient, Closeable {
     }
 
     private boolean isProtectionRequired(HttpRequest request) {
-        return !NON_PROTECTED_METHODS.contains(request.getRequestLine()
-                                                      .getMethod());
+        return !NON_PROTECTED_METHODS.contains(request.getMethod());
     }
 
     private void initializeToken(boolean force) throws IOException {
@@ -151,20 +99,20 @@ public class CsrfHttpClient implements HttpClient, Closeable {
         HttpGet fetchTokenRequest = new HttpGet(csrfGetTokenUrl);
         fetchTokenRequest.addHeader(CSRF_TOKEN_HEADER_NAME, CSRF_TOKEN_HEADER_FETCH_VALUE);
         setHttpRequestHeaders(fetchTokenRequest);
-        HttpResponse response = delegate.execute(fetchTokenRequest);
-        EntityUtils.consume(response.getEntity());
-        if (response.containsHeader(CSRF_TOKEN_HEADER_NAME)) {
-            return response.getFirstHeader(CSRF_TOKEN_HEADER_NAME)
-                           .getValue();
-        }
-
-        return null;
+        return delegate.execute(fetchTokenRequest, response -> {
+            EntityUtils.consume(response.getEntity());
+            if (response.containsHeader(CSRF_TOKEN_HEADER_NAME)) {
+                return response.getFirstHeader(CSRF_TOKEN_HEADER_NAME)
+                               .getValue();
+            }
+            return null;
+        });
     }
 
     /**
      * Checks if a request has failed due to an expired session(token is not valid anymore) and regenerates the token if needed.
      */
-    private boolean isRetryNeeded(HttpRequest request, HttpResponse response) throws IOException {
+    private boolean isRetryNeeded(HttpRequest request, ClassicHttpResponse response) throws IOException {
         if (!isProtectionRequired(request)) {
             // The request was not protected so the error was not caused by
             // missing token.
@@ -173,8 +121,7 @@ public class CsrfHttpClient implements HttpClient, Closeable {
 
         // The token was initialized but probably the session has expired. If it
         // is so, then the token needs to be regenerated and request retried.
-        if (isTokenInitialized && (response.getStatusLine()
-                                           .getStatusCode() == HttpStatus.SC_FORBIDDEN)) {
+        if (isTokenInitialized && (response.getCode() == HttpStatus.SC_FORBIDDEN)) {
 
             Header csrfTokenHeader = response.getFirstHeader(CSRF_TOKEN_HEADER_NAME);
 
@@ -195,9 +142,12 @@ public class CsrfHttpClient implements HttpClient, Closeable {
 
     @Override
     public void close() throws IOException {
-        if (delegate instanceof Closeable) {
-            ((Closeable) delegate).close();
-        }
+        delegate.close();
+    }
+
+    @Override
+    public void close(CloseMode closeMode) {
+        delegate.close(closeMode);
     }
 
     private interface Executor<T> {
